--- a/style/cruftfiles.css
+++ b/style/cruftfiles.css
@@ -1,15 +1,53 @@
 .cruftfile-delete-button {
   color: #a00;
 }
+
 .cruftfile-delete-button:hover {
   color: #EA6161 !important;
   outline: none;
   box-shadow: none;
 }
+
 .cruftfile-delete-button:active,
 .cruftfile-delete-button:focus,
 .cruftfile-delete-button:visited {
   color: #a00;
   outline: none;
   box-shadow: none;
+}
+
+.inside {
+  padding: 10px 15px 0px 15px!important;
+}
+.seravo-section {
+  margin-bottom: 2.5rem;
+}
+.js .widget .widget-top, .js .postbox .hndle {
+  cursor: pointer;
+}
+.postbox-container-max {
+  width: 100%
+}
+@media only screen and (min-width: 1500px) {
+  #wpbody-content #dashboard-widgets .postbox-container {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .label_buttons {
+    display: block;
+  }
+  .to_button, .adminer_button {
+    padding-top: 15px;
+  }
+  .optionboxes {
+    padding-left: 10%;
+  }
+  .to_label {
+    padding-right: 15%;
+  }
+  .from_label {
+    padding-right: 10%;
+  }
 }
