Introduce feature for removing unwanted plugins

--- a/style/cruftfiles.css
+++ b/style/cruftfiles.css
@@ -15,7 +15,9 @@
   outline: none;
   box-shadow: none;
 }
-
+.cruft-plugin-set {
+  padding-top: 15px;
+}
 .inside {
   padding: 10px 15px 0px 15px!important;
 }
@@ -31,6 +33,7 @@
 .cruft-tool-selector {
   background-color: antiquewhite;
 }
+
 @media only screen and (min-width: 1500px) {
   #wpbody-content #dashboard-widgets .postbox-container {
     width: 50%;
