--- a/style/cruftfiles.css
+++ b/style/cruftfiles.css
@@ -43,6 +43,26 @@ table {
 .child-delete-button {
     margin-left: 30px;
 }
+table {
+  border: collapse;
+}
+.cruft-theme-table {
+    border-bottom: 2px solid black;
+}
+.crufttheme {
+    padding: 1px 1px 1px 1px;
+    display: flex;
+    border-top: 2px solid black;
+    flex-direction: row;
+}
+
+.crufttheme-child {
+    border-top: none;
+}
+/* TODO check this  */
+.child-delete-button {
+    margin-left: 30px;
+}
 
 .cruft-button-hide {
   clip-path: polygon(0px 0px, 0px 0px, 0px 0px, 0px 0px) !important;
