--- a/style/log-viewer.css
+++ b/style/log-viewer.css
@@ -35,6 +35,9 @@
     width: 300%;
     background: rgba(0, 0, 0, .5);
 }
+.log-view .log-table-view .logrow {
+  display: block;
+}
 .logrow:hover {
     background-color: #44A1CB;
     color: white;
