--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -4,7 +4,7 @@
   }
 }
 @media only screen and (max-width:1445px) {
-  .inside {
+  .seravo-postbox .inside {
     padding: 10px 20px 20px 20px!important;
   }
 }
