--- a/style/purge-cache.css
+++ b/style/purge-cache.css
@@ -13,7 +13,6 @@
   animation: purge-cache-spin 1.2s infinite;
   animation-timing-function: linear;
 }
-
 @moz-keyframes purge-cache-spin {
   0% {
     transform: rotate( 0deg );
@@ -36,5 +35,19 @@
   }
   100% {
     transform: rotate( 360deg );
+  }
+}
+@media screen and (max-width:782px) {
+  #wp-admin-bar-nginx-helper-purge-all {
+    display: block !important;
+  }
+  #wpadminbar #wp-admin-bar-nginx-helper-purge-all .ab-item .seravo-purge-cache-icon {
+    margin-top: 0px;
+  }
+  #wpadminbar #wp-admin-bar-nginx-helper-purge-all .ab-item .seravo-purge-cache-icon:before {
+    top: -3px;
+    line-height: 53px;
+    height: 45px !important;
+    width: 52px;
   }
 }
