--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -1,24 +1,16 @@
-@media only screen and (max-width: 1430px) {
-  .seravo-postbox .hideMobile {
-    font-size: 0px!important;
-  }
-}
-@media only screen and (max-width:1445px) {
-  .seravo-postbox .inside {
-    padding: 10px 20px 20px 20px!important;
-  }
-}
 .seravo-postbox .inside {
-  padding: 10px 15px 0px 15px!important;
-  margin: 0!important;
+  padding: 10px 20px 20px 20px;
 }
+
 .seravo-postbox .inside pre {
   overflow: auto;
   padding-bottom: 15px;
 }
+
 .seravo-postbox .inside td {
   padding-right: 15px;
 }
+
 .seravo-postbox .seravo-section {
   margin-bottom: 2.5rem;
 }
@@ -27,15 +19,31 @@
 .seravo-postbox ::-webkit-scrollbar {
   -webkit-appearance: none;
 }
+
 .seravo-postbox ::-webkit-scrollbar:horizontal {
   height: 12px;
 }
+
 .seravo-postbox ::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, .5);
   border-radius: 10px;
   border: 2px solid #dddede;
 }
+
 .seravo-postbox ::-webkit-scrollbar-track {
-  border-radius: 10px;
   background-color: #dddede;
+  border-radius: 10px;
+}
+
+@media only screen and (min-width:1430px) {
+  .seravo-postbox .inside {
+    padding: 10px 15px 0px 15px;
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 1431px) {
+  .seravo-postbox .hideMobile {
+    font-size: 0px;
+  }
 }
