--- a/style/updates.css
+++ b/style/updates.css
@@ -1,11 +1,6 @@
-@media only screen and (min-width: 1500px) {
-  #wpbody-content #dashboard-widgets .postbox-container {
-    width: 50%;
-  }
-}
-
-.inside {
-  padding: 30px 60px 60px 60px!important;
+#dashboard_right_now .seravo-updates-postbox,
+#dashboard_quick_press .seravo-updates-postbox {
+  padding: 30px 60px 60px 60px;
   text-align: center;
 }
 
@@ -13,32 +8,21 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width:1445px) {
-  .inside {
-    padding: 10px 20px 20px 20px!important;
-    text-align: center;
-  }
-}
-
 .allow_updates_checkbox {
   padding-bottom: 10px;
 }
 
 .technical_contacts_buttons {
+  padding-bottom: 10px;
   padding-top: 10px;
 }
 
 .email-button {
   margin-bottom: 5px!important;
 }
+
 .dashicons {
   line-height: 1.4;
-}
-
-@media screen and (max-width: 425px) {
-  .technical_contacts_input {
-    max-width: 200px;
-  }
 }
 
 form[name="seravo_updates_form"] > .technical_contacts_error {
@@ -46,27 +30,27 @@ form[name="seravo_updates_form"] > .technical_contacts_error {
 }
 
 form[name="seravo_updates_form"].has-errors > .technical_contacts_error {
-  background: #c51244 !important;
-  padding: 10px !important;
-  border-radius: 0 !important;
-  position: relative;
-  display: block;
-  max-width: 280px;
-  margin: auto;
+  background: #c51244;
+  border-radius: 0;
   box-shadow: 1px 1px 1px #aaaaaa;
-  margin-top: 10px;
   color: white;
+  display: block;
+  margin-top: 10px;
+  margin: auto;
+  max-width: 280px;
+  padding: 10px;
+  position: relative;
 }
 
 form[name="seravo_updates_form"].has-errors > .technical_contacts_error::before {
-  content: '';
-  width: 0;
-  height: 0;
+  border-bottom: 10px solid #c51244;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #c51244;
+  content: '';
+  height: 0;
   position: absolute;
   top: -10px;
+  width: 0;
 }
 
 form[name="seravo_updates_form"].has-errors > .technical_contacts_error::after {
@@ -75,82 +59,97 @@ form[name="seravo_updates_form"].has-errors > .technical_contacts_error::after {
 }
 
 form[name="seravo_updates_form"].has-errors > .technical_contacts_input {
-  box-shadow: 0!important;
-  border: 1px solid #c51244 !important;
   background: #fff0f4;
+  border: 1px solid #c51244;
   color: #eb819f;
 }
 
 .ba-slider {
-    position: relative;
-    overflow: hidden;
-    margin: 20px auto;
+  margin: 20px auto;
+  overflow: hidden;
+  position: relative;
 }
 
 .ba-slider img {
-    width: 100%;
-    display:block;
-    max-width:none;
+  display:block;
+  max-width:none;
+  width: 100%;
 }
 
 .ba-slider .ba-resize {
-    position: absolute;
-    top:0;
-    left: 0;
-    height: 100%;
-    width: 50%;
-    overflow: hidden;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top:0;
+  width: 50%;
 }
 
-
 .ba-slider .ba-handle { /* Thin line seperator */
-  position:absolute;
-  left:50%;
-  top:0;
-  bottom:0;
-  width:4px;
-  margin-left:-2px;
-
   background: rgba(0,0,0,.5);
+  bottom:0;
   cursor: ew-resize;
+  left:50%;
+  margin-left:-2px;
+  position:absolute;
+  top:0;
+  width:4px;
 }
 
 .ba-slider .ba-handle:after {  /* Big orange knob  */
-    position: absolute;
-    top: 50%;
-    width: 64px;
-    height: 64px;
-    margin: -32px 0 0 -32px;
-
-    content:'\21d4';
-    color:white;
-    font-weight:bold;
-    font-size:36px;
-    text-align:center;
-    line-height:64px;
-
-    background: #ffb800; /* @orange */
-    border:1px solid #e6a600; /* darken(@orange, 5%) */
-    border-radius: 50%;
-    transition:all 0.3s ease;
-    box-shadow:
-      0 2px 6px rgba(0,0,0,.3),
-      inset 0 2px 0 rgba(255,255,255,.5),
-      inset 0 60px 50px -30px #ffd466; /* lighten(@orange, 20%)*/
+  background: #ffb800; /* @orange */
+  border-radius: 50%;
+  border:1px solid #e6a600; /* darken(@orange, 5%) */
+  color:white;
+  content:'\21d4';
+  font-size:36px;
+  font-weight:bold;
+  height: 64px;
+  line-height:64px;
+  margin: -32px 0 0 -32px;
+  position: absolute;
+  text-align:center;
+  top: 50%;
+  transition:all 0.3s ease;
+  width: 64px;
+  box-shadow:
+    0 2px 6px rgba(0,0,0,.3),
+    inset 0 2px 0 rgba(255,255,255,.5),
+    inset 0 60px 50px -30px #ffd466; /* lighten(@orange, 20%)*/
 }
 
 .ba-slider .ba-handle.ba-draggable:after {
-    width: 48px;
-    height: 48px;
-    margin: -24px 0 0 -24px;
-    line-height:50px;
-    font-size:30px;
+  font-size:30px;
+  height: 48px;
+  line-height:50px;
+  margin: -24px 0 0 -24px;
+  width: 48px;
 }
 
 .ba-text-block {
-  position: absolute;
-  top: 20px;
-  right: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+@media only screen and (min-width: 1500px) {
+  #wpbody-content #dashboard-widgets .postbox-container {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width:1445px) {
+  #dashboard_right_now .seravo-updates-postbox,
+  #dashboard_quick_press .seravo-updates-postbox{
+    padding: 10px 20px 20px 20px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .technical_contacts_input {
+    max-width: 200px;
+  }
 }
