Redesign shadows postbox
Changes the width of shadows postbox from 100% to default to support
multiple postboxes on the same page (upcoming centralization changes).

To be able to fit all the functionality in a smaller postbox,
dropdown is used to select the shadow (like in mails-page) instead of showing all of them
in a table.

New design also has better shadow domain support.

--- a/style/shadows.css
+++ b/style/shadows.css
@@ -1,3 +1,53 @@
-#wpbody-content #dashboard-widgets .postbox-container {
+#shadow-table th, #shadow-rs-table th {
+  text-align: left;
+  padding-right: 20px;
+}
+
+.shadow-row table th {
+  text-align: left;
+  padding-right: 20px;
+}
+
+.shadow-hidden {
+  display: none;
+}
+
+#shadow-selector {
   width: 100%;
+  margin-bottom: 10px;
+}
+
+#shadow-reset {
+  margin-top: 10px;
+}
+
+.data-actions th, .data-actions td {
+  padding-top: 10px;
+}
+
+.action-link span:before {
+  position: relative;
+  top: 1px;
+  font: normal 13px/1 dashicons;
+  content: " \f142";
+}
+
+.action-link.closed span:before {
+  content: " \f140";
+}
+
+#shadow-data-actions {
+  padding: 15px;
+}
+
+#shadow-rs-table {
+  margin: 20px 0 5px 0;
+}
+
+.shadow-reset-row {
+  margin-top: 20px;
+}
+
+#shadow-reset {
+  margin: 0;
 }
