Hide input, not whole cell in cruft themes list
This makes the UI prettier. Also make sure the padding cell has correct
width so table flows correctly.

Parent theme still needs more styling and the JavaScript a heavy cleanup.

--- a/style/cruftfiles.css
+++ b/style/cruftfiles.css
@@ -120,7 +120,8 @@ table {
   font-weight: bold;
 }
 
-[data-childs="true"] .crufttheme-delete {
+/* If theme has children, hide the checkbox so the parent cannot be deleted */
+[data-childs="true"] .crufttheme-delete input {
   display: none;
 }
 
