--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -47,3 +47,33 @@
     font-size: 0px;
   }
 }
+
+#dashboard-widgets .postbox-container.two-column-layout {
+  width: 1050px;
+}
+
+@media only screen and (max-width: 2300px) {
+  #dashboard-widgets .postbox-container.two-column-layout {
+    width: 49.5%;
+  }
+}
+
+@media only screen and (min-width: 1500px) and (max-width: 1800px) {
+  #wpbody-content #dashboard-widgets #postbox-container-1.two-column-layout {
+    width: 50.5%;
+  }
+
+  #wpbody-content #dashboard-widgets .postbox-container.two-column-layout {
+    width: 49.5%;
+  }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 1499px) {
+  #wpbody-content #dashboard-widgets .postbox-container.two-column-layout {
+    width: 49.5%;
+  }
+
+  #wpbody-content #dashboard-widgets #postbox-container-2.two-column-layout {
+    width: 50.5%;
+  }
+}
