Disable weak password option (Closes: #322)
Updates the weak password disabling to affect lost-password screen too. This both hides the checkbox and disables the button if it was enabled for some reason.

--- a/style/passwords.css
+++ b/style/passwords.css
@@ -1,6 +1,6 @@
 /* Disable the built-in WordPress profile page option 'Confirm use of weak password'
    by hiding the entire row, so users can never revert to it.
 */
-tr.pw-weak {
+tr.pw-weak, div.pw-weak {
   display: none !important;
 }
