Add GUI for speed test
Under Tools -> Site Status there is now block for Speed Test to run
tests to different urls within the wordpress site. The test runs multiple
curl commands from within the server to see the speed of generating the
html from php. The tests are run with both with and without cache enabled.

There is button in the wordpress admin bar to test the speed of current page
using the above mentioned GUI.

--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -236,3 +236,10 @@ th, td {
 .dashicons-info {
   color: #b1b2b3;
 }
+.speed_test_input {
+  width: 50%;
+}
+
+.speed_test_form {
+  padding: 10px;
+}
