Make h3 and h4 headings larger and fix heading levels
Add styling so that h3 and h4 headings look larger. Use heading elements in right order. Closes: #389

--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -35,6 +35,14 @@
   border-radius: 10px;
 }
 
+#dashboard-widgets h3 {
+  font-size: 130%;
+}
+
+#dashboard-widgets h4 {
+  font-size: 120%;
+}
+
 @media only screen and (min-width:1430px) {
   .seravo-postbox .inside {
     padding: 10px 15px 0px 15px;
