Use a bar chart as database chart (Closes: #397)
Change database chart library to Apex Charts.
Use a bar chart instead of a pie chart.

If there are many plugins, for istance, the number of database tables can be really big,
so there is now a wrapper that makes the list scrollable if the number becomes too large.

Database table names are also aligned as far left as Apex Charts allows because table names can be long and be cut off.
Because of possible long names and the scroll bar introduced in this commit, there are now Apex Charts tooltips that have
the same information as the bar themselves.

--- a/style/database.css
+++ b/style/database.css
@@ -52,12 +52,6 @@ span.dashicons-external {
 }
 
 @media only screen and (max-width: 376px) {
-  .pie_container {
-    margin: -90px;
-    overflow-wrap: break-word;
-    padding-top: 90px;
-    white-space: pre-line;
-  }
   .section_chart_mobile {
     padding-bottom: 25%;
   }
@@ -66,4 +60,17 @@ span.dashicons-external {
     margin: auto;
     width: 253px!important;
   }
+}
+
+.chart_container {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 800px;
+  white-space: pre-line;
+  padding-right: 15px;
+}
+
+.arrow_box {
+  font-size: 11px;
+  padding: 3px;
 }
