Do not limit the number of shown large dirs
Before only 5 of the largest directories were included in the chart. Remove this limit. Because now the number of directories can be really big, there is now a wrapper that makes the list scrollable if it becomes too large. The dir names can be really long, so they are now aligned so far to the left as possible.

--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -243,3 +243,15 @@ th, td {
 .speed_test_form {
   padding: 10px;
 }
+
+.bars_container {
+  max-height: 700px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-right: 15px;
+}
+
+.arrow_box {
+  font-size: 11px;
+  padding: 3px;
+}
