Add timeout error message to shadow reset
The user is now informed when the ajax call times out.

Related #315, #187

--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -108,6 +108,11 @@ th, td {
   background-color: #cc0000;
 }
 
+#alert-timeout {
+  background-color: yellow;
+  color: black;
+}
+
 .closebtn {
   font-size: large;
   color: white;
