Add some css styles manually for postbox (Related: #438)
Add manually some css styles so that Seravo postbox top stylings work
as intended on WordPress 5.5 versions too

--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -1,3 +1,26 @@
+.postbox .handlediv {
+  float: right;
+  width: 36px;
+  height: 36px;
+  margin: 0;
+  padding: 0;
+  /* border: 0; */
+  background: 0 0;
+  cursor: pointer;
+}
+
+.js .postbox .hndle, .js .widget .widget-top {
+  cursor: pointer;
+}
+
+.ui-draggable-handle, .ui-sortable-handle {
+  touch-action: none;
+}
+
+.postbox .hndle, .stuffbox .hndle {
+  border-bottom: 1px solid #ccd0d4;
+}
+
 .seravo-postbox .inside {
   padding: 10px 20px 20px 20px;
 }
