--- a/style/login-notification.css
+++ b/style/login-notification.css
@@ -1,4 +1,5 @@
-div#seravo-error-widget.postbox {
+div#seravo-error-widget.postbox,
+div#seravo-low-disk-space-widget.postbox {
   border-left: 0.2em solid #e8ba1b;
 }
 
