--- a/style/common.css
+++ b/style/common.css
@@ -30,6 +30,13 @@
       border-left: 0.2em solid #e8ba1b;
   }
 
+ /* Dashicon styles */
+
+ .dashicons .dashicons-external {
+  line-height: 1.4;
+  padding-left: 3px;
+ }
+
  /* Tooltip css */
 
   .tooltip {
