--- a/style/common.css
+++ b/style/common.css
@@ -8,21 +8,26 @@
   .side-by-side-container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .side-by-side-container > div {
     padding: 10px 10px 10px 0;
   }
 
+  .seravo-spinner-wrapper {
+    display: none;
+  }
+
   .seravo-spinner {
     background: url(../../../../wp-admin/images/spinner.gif) no-repeat;
     background-size: 20px 20px;
-    display: none;
     vertical-align: middle;
     opacity: 0.7;
     filter: alpha(opacity=70);
     width: 20px;
     height: 20px;
+    margin-right: -5px;
   }
 
   .postbox-ul {
