Rewrite disk usage postbox
- Add flag variable to LazyLoader AJAX for <hr> element
- Change the layout a bit
- Enhance the diskbar tooltips
- Own localization for the charts

--- a/style/common.css
+++ b/style/common.css
@@ -12,6 +12,10 @@
   margin: 15px 0 15px 0;
 }
 
+.side-by-side-container.evenly {
+  justify-content: space-evenly;
+}
+
 .side-by-side-container > div {
   padding: 0 10px 0 0;
 }
