--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -126,21 +126,13 @@ th, td {
   color: black;
 }
 
-.seravo-site-check-success-box {
-  padding: 10px;
-  border: 1.5px solid#ccd0d4;
-  border-left: solid 0.3em #038103;
-  border-bottom: none;
-}
-.seravo-site-check-issue-box {
-  padding: 10px;
-  border: 1.5px solid#ccd0d4;
-  border-left: solid 0.3em red;
-  border-bottom: none;
+/* Override the overflow-y on common css */
+#site-checks-output.seravo-result-wrapper-output {
+  overflow-y: initial;
+  padding: 2em;
 }
 
-.seravo-cache-test-result-wrapper,
-.seravo-site-check-result-wrapper {
+.seravo-cache-test-result-wrapper {
   -moz-transition: border 1s ease-in;
   -o-transition: border 1s ease-in;
   -webkit-transition: border 1s ease-in;
@@ -155,25 +147,16 @@ th, td {
   transition: border 1s ease-in;
 }
 
-.seravo-cache-test-result,
-.seravo-site-check-result {
+.seravo-cache-test-result {
   box-shadow: 0 1px 1px 1px rgba(0,0,0,0.2);
   display: none;
   margin: 1em;
   max-height: 30em;
   padding: 1em;
-}
-
-.seravo-site-check-result {
-  padding: 2em;
-}
-
-.seravo-cache-test-result {
   overflow: auto;
 }
 
-.seravo_cache_tests_status,
-.seravo_site_check_status {
+.seravo_cache_tests_status {
   font-size: 15px;
   font-weight: bold;
   margin-top: 1.6em;
@@ -182,8 +165,7 @@ th, td {
   text-align: center;
 }
 
-.seravo_cache_test_show_more_wrapper,
-.seravo_site_check_show_more_wrapper {
+.seravo_cache_test_show_more_wrapper {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   float: right;
@@ -195,13 +177,9 @@ th, td {
 }
 
 .seravo_cache_test_show_more,
-.seravo_site_check_show_more,
 .seravo_cache_test_show_more:hover,
-.seravo_site_check_show_more:hover,
 .seravo_cache_test_show_more:active,
-.seravo_site_check_show_more:active,
-.seravo_cache_test_show_more:focus,
-.seravo_site_check_show_more:focus {
+.seravo_cache_test_show_more:focus {
   box-shadow: none;
   color: inherit;
   text-decoration: none;
@@ -228,16 +206,6 @@ th, td {
   position: relative;
   padding-left: 5px;
   content: "\f348";
-}
-
-#seravo_site_check .tooltip {
-  padding-left: 0px;
-  margin-right: 5px;
-}
-
-#seravo_site_check .tooltip a {
-  color: inherit;
-  text-decoration: underline;
 }
 
 .tooltip .tooltiptext {
