Rewrite speed test postbox
-Also add toggle icon for clearing the input field

--- a/style/common.css
+++ b/style/common.css
@@ -138,6 +138,10 @@ table.widefat {
   white-space: nowrap;
 }
 
+.wrap-anywhere {
+  overflow-wrap: anywhere;
+}
+
 .result-table-wrapper {
   max-height: 30vh;
   overflow-y: scroll;
