Rewrite cruftfiles postbox
-CruftRemover PHP class
-CruftRemover JS file
-Proper message and list about files that could not be deleted

--- a/style/common.css
+++ b/style/common.css
@@ -153,6 +153,10 @@ table.widefat {
   padding-right: 15px;
 }
 
+.seravo-container.large {
+  max-height: 700px;
+}
+
 .result-table-wrapper {
   max-height: 30vh;
   overflow-y: scroll;
